[package]
name = "pizza_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
async-trait = "0.1.89"
derive_more = "2.1.1"
json = "0.12.4"
serde = {version = "1.0.228", features = ["derive"] }
surrealdb = "2.4.0"
uuid = "1.19.0"
validator = {version = "0.20.0", features = ["derive"] } 
